# Vulcan-Basics

./: .gitignore  CMakeLists.txt  conandata.yml
src/: Camera.cpp  Camera.hpp  DescriptorAllocator.cpp  DescriptorAllocator.hpp  MeshAssetBuilder.cpp  MeshAssetBuilder.hpp  Vertex.hpp  VulkanEngine.cpp  VulkanEngine.hpp  VulkanUtil.hpp  main.cpp
src/builders/: DescriptorLayoutBuilder.cpp  DescriptorLayoutBuilder.hpp  MeshAssetBuilder.cpp  MeshAssetBuilder.hpp  PipelineBuilder.cpp  PipelineBuilder.hpp  RessourceBuilder.cpp  RessourceBuilder.hpp
src/rendering/: IRenderable.hpp  MeshNode.cpp  MeshNode.hpp  Node.hpp
src/rendering/engine/: DescriptorAllocator.cpp  DescriptorAllocator.hpp  VulkanEngine.cpp  VulkanEngine.hpp
src/rendering/materials/: Metallic_Roughness.hpp
src/rendering/nodes/: MeshNode.hpp
src/shaders/: compile.bat  input_structures.glsl  mesh.frag  mesh.vert  shader.frag  shader.vert
